2008-03-11  Badlop  <badlop@process-one.net>

	* src/ejabberd_s2s_in.erl (get_cert_domains): When compiling with
	Erlang R12, replace the calls to deprecated module PKIX1Explicit88
	with OTP-PKIX (EJAB-556)

2008-03-10  Badlop  <badlop@process-one.net>

	* src/ejabberd_update.erl: Fix crash when browsing the Update
	page in Erlang R12 (EJAB-552)

2008-03-09  Badlop  <badlop@process-one.net>

	* src/mod_proxy65/mod_proxy65_service.erl: Implement alternative
	to the deprecated function inet:ip_to_bytes (thanks to Evgeniy
	Khramtsov)(EJAB-542)

2008-03-04  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Improve documentation of host_config
	add (EJAB-544)
	* doc/guide.html: Likewise
	* src/ejabberd.cfg.example: Likewise
	* src/ejabberd_config.erl: Likewise

	* doc/guide.tex: mod_announce recommends, but doesn't require
	mod_adhoc (thanks to Anastasia Gornostaeva)
	* doc/guide.html: Likewise
	* src/ejabberd.cfg.example: Likewise

2008-02-29  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_roster.erl: Fixed "from" attribute in roster pushes
	* src/mod_roster_odbc.erl: Likewise

2008-02-28  Badlop  <badlop@process-one.net>

	* src/ejabberd_app.erl (prep_stop): Stop modules when stopping
	ejabberd (EJAB-536)
	* src/mod_caps.erl (stop): Probably not needed to stop supervisor
	child (EJAB-536)
	* src/mod_muc/mod_muc.erl (room_destroyed): Catch message
	sending (EJAB-536)
	* src/mod_muc/mod_muc_room.erl (init): Ensure rooms are called
	when the process dies due to a linked die (EJAB-536)

2008-02-27  Mickael Remond <mremond@process-one.net>

	* src/ejabberd_check.erl: Separate config loading from
	configuration sanity checks (EJAB-533)
	* src/src/ejabberd_app.erl: Likewise
	* src/ejabberd_app.erl: Likewise
	
2008-02-26  Badlop  <badlop@process-one.net>

	* src/msgs/it.msg: Updated (thanks to Smart2128)

2008-02-21  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.0.txt: Small fixes and update date

2008-02-20  Badlop  <badlop@process-one.net>
